# vsevedov-tlmocnik

./: Cargo.toml  requirements.txt
entities/: Cargo.toml
migration/: Cargo.toml
src/: main.rs
src/guards/: auth.rs
src/services/: ai_pipelines.rs  mod.rs  openai.rs
vsevedov-tlmocnik/: __main__.py  annotations.py  exceptions.py  flag.py  flags.py  request.py
