[package]
name = "vsevedov-tlmocnik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.6", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
rocket = "0.5.0-rc.2"
dotenv = "0.15.0"
anyhow = "1.0.65"
error-stack = { version = "0.2.1", features = ["anyhow"] }


[workspace]
members = ["entities", "migration", "."]
